assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inclusive+Sans:ital@0;1&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
/*--------------------------------------------Colours*/

body {
    background-color: #dfe7ee;
}

.col-heading {
    margin-left: 40px;
    margin-right: 40px;
}

.inline-block {
    color: #af9442;
}

.section-details {
    background-color: #dffcff;
    border-color:#8913b0;
}

.bg-color-contact {
    background-color: #143049;
}

.contact-color {
    color: #4203bf;
}

.foot-email a {
    color: #000000;
    font-weight: 700;
}

.list-inline-item {
    margin-bottom: 20px;
}

/* ----------------------------------------Special paddings/margins/text */

h1,
h2,
h3,
h4 {
    margin: 0;
    font-family: 'Inclusive+Sans', sans-serif;
}

h2 {
    text-align: center;
}

p {
    font-family: 'Open+Sans', sans-serif;
    margin: 10px;
    font-size: 14px;
    color:#4203bf;
    font-weight: 600;
}

.uppercase {
    text-transform: uppercase;
}

.solid-border {
    border-style: solid;
    border-width: 2px 0 0;
    padding-left: 15px;
    padding-right: 15px;
    border-color:#8913b0;
}

.button-border {
    border: 3px solid #8913b0;
    border-radius: 0 0 5% 5%;
}

.bottom-pad {
    padding-bottom: 10px;
}

.top-pad {
    padding-top: 20px;
}

.bigger-font {
    font-size: 40px;
    /* color: black; */
    color: #ed4c4c;
}

.blue-text {
    color:#4203bf;
    font-weight: 600;
}

.purple-text {
    color:#e94e69 !important;
}

.indent-para {
    padding-left: 40px;
}

ul.myth > li {
    margin-left: 40px;
}

li {
    margin-right: 20px;
}

.content-hidden {
    display: none;
}

/*--------------------------------------------Heading*/

#header-details {
     text-align: center;
}

.error-screen-padding {
    padding-top: 50px;
}
 
/*--------------------------------------------Images*/

.logo-img {
    max-height: 150px;
    max-width: 150px;
}

.img {
    width: 100%;
    height: auto;
}

.img-reduce {
    width: 90%;
    height: auto;
}

.img-small {
    width: 30%;
    height: auto;
    }

.img-narrow {
    width: 50%;
    height: auto;
}

.img-myth {
    width: 55%;
    margin:auto;
    display: block;
}

/*--------------------------------------------Titles*/

.title {
    font-family: "Inclusive+Sans", sans-serif;
    font-size: 25px;
    font-weight: 700;
    margin-top: 10px;
    margin-bottom: 10px;
    color: #4203bf;
    text-align: center;
}

.sub-title {
    font-family: "Inclusive+Sans", sans-serif;
    font-weight: 800;
    font-size: 24px;
    margin-top: 20px;
    margin-bottom: 20px;
    text-align: center;
    color: #4203bf;
}

.modal-text {
    font-family: "Inclusive+Sans", sans-serif;
    font-weight: 600;
    font-size: 20px;
    margin-top: 20px;
    margin-bottom: 20px;
    text-align: center;
    color: #4203bf;
}

.foot-title {
    color: #4203bf;
    font-size: 22px;
    padding: 10px 0 0 0;
    text-align: center;
}

.center {
    margin: auto;
}

.center-text {
    text-align: center;
}

.center-img {
    text-align: center;
}

/*--------------------------------------------flip card (myth) code*/
.myth-card {
    background-color: #dffcff;
    width: 300px;
    height: 300px;
    padding: 30px;
    margin-left: 15px;
    margin-right: 15px;
  }
  
  .myth-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.6s;
    transform-style: preserve-3d;
  }

  /* updated from hover to mouse click via jQuery*/
  .myth-card-flipped .myth-card-inner {
    transform: rotateY(180deg);
  }
 
  .myth-card-front, .myth-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: 10%;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
  }
  
  .myth-card-front {
    background-color: #8913b0;
    background-position: center; 
    background-repeat: no-repeat;    
    color: #f0f0f0;
    border: 10px solid #2980b9;
  }
  
  .myth-card-back {
    background-color: #2980b9;
    color: white;
    border: 10px solid #8913b0;
    transform: rotateY(180deg);
  }

  .myth-card-text {
    font-size: 0.5rem;
    color: #f0f0f0;
}

/*--------------------------------------------footer*/

footer {
    color: #fff;
    min-height: 120px;
}

.social-links {
    padding-left: 1em;
    padding-top: 1em;
}

.social-links li a i {
    width: 32px;
    height: 32px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 20px;
    line-height: 7px;
    text-align: center;
    color: #000000;
    background: #e999c5;
    transition: all 0.35s ease-in-out;
}

.sr-only {
    color: #efe9d7;
}

.list-inline {
    text-align:center;
}

.foot-email {
    text-align: center;
}

#footer-details {
    text-align: center;
}

/* ----------------------------------------Contact Form */

.comment-text {
    font-size: 24px;
    font-weight: 600;
}

.text-muted-wcag {
    /* to provide sufficient WCAG contrast */
    color: #4203bf !important;
}

/* ----------------------------------------overriding some form-control settings to provide a crisper colour contrast */
.form-control {
    font-size: 1.5rem;
    font-weight: 500;
    color: #af9442;
    background-color: #a4c8ef;
    border: 2px solid #8913b0;   
    border-radius: 2rem;
}

.center-form {
    padding-top: 10px;
    margin: 0 auto;
    max-width: 70%;
}

.label-font-size {
    font-size: 24px;
}

/* ----------------------------------------fixed size on page with scrollbar */
textarea {
    min-height: 200px;
    max-height: 300px;
    resize: none;
}


.btn-block {
    background-color: #4203bf;
    color: #e8edf3;
    border: 3px solid #8913b0;
    font-weight: 600;
    font-size: 16px;
    margin-top: 50px;
    text-align: left;
    padding: 0 20px;
}

.btn-block:hover {
    background-color: #D31ABC;
    color: #f0f0f0;
}

.btn-secondary {
    background-color: #007bff;
    color: #082137;
    border-radius: 2rem;
    margin: 25px;
    border: 5px solid #8913b0;
}

.btn-secondary:hover {
    background-color: #8913b0;
    color: #01080f
}

button[type="submit"] {
    margin-top: 15px;
    margin-bottom: 20px;
    font-size: 22px;
    font-weight: 500;
}

.modal-btn {
    font-size: 44px;
    font-weight: 500;
    color: #8913b0;
    background-color: #2e89e9;
}

.btn-lg {
    border-radius: 25%;
    
    border: 3px solid #8913b0;
    font-size: .5rem;
}

/* change shape and text color of active menu item */
.btn-lg.active {
    border-radius: 50%;
    color: #2be712 !important;
}

/* contrasts to comply with WCAG */
.btn-quiz {
    background-color: #002a57;
    color: white;
}

.btn-home {
    background-color: #0f5661;
    color: white; 
}

.btn-contact {
    background-color: #574100;
    color: white;
}

.btn-message {
    background-color: #003b7a;
    color: white;
}

a {
    color: #002a57;
}


.btn-lg:hover {
    background-color: #8913b0;
    color: #4203bf;
    font-weight: 500;
}

/* override default black color to match all menu buttons */
.btn-warning {
    color: #fff;
}

.options .btn-icon:before {
    font-family: 'FontAwesome';  
    content: "\f424";
    float: right; 
}

/* ----------------------------------------The Modal (background) */
.modal {
    display: none; 
    position: fixed; 
    z-index: 1; 
    width: 100%; 
    height: 100%; 
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); 
    background-color: rgba(0, 0, 0, 0.6); /* Black w/ opacity */
  }
  
  .contact-modal-content {
    background-color: #94c2e7;
    margin: 5% auto; /*top and centered */
    padding: 20px;
    border: 5px solid #8913b0;
    border-radius: 5%;
    width: 80%; 
  }

  .modal-backdrop {
    position: relative;
  }
  
/* ----------------------------------------Media Queries */

/* Amend modal width and height on larger screen sizes. */

@media (min-width: 1400px) {
    .contact-modal-content {
        width: 50%;
    }
}

/* ----------------------------------------resize menu items and text for bigger  and ultra smallscreens*/

/* minor change to social links on small screens */
@media (max-width: 575px) {
.social-links li a i {
    width:26px;
    height: 26px;
    font-size: 18px;
    padding: 11px 0;
    }
}

@media (min-width: 768px) {
    .btn-block {
        font-size: 22px;
    }
    .sub-title {
        font-size: 28px;
    }
    p {
        font-size: 16px;
    }
}

@media (min-width: 968px) {
    .btn-block {
        font-size: 24px;
    }
    .sub-title {
        font-size: 44px;
    } 
    p {
        font-size: 18px;
    }    
}

@media (min-width: 1200px) {
    .btn-block {
        font-size: 28px;
    }
    .sub-title {
        font-size: 54px;
    }
    p {
        font-size: 20px;
    } 
}

@media (min-width: 640px) {
    .title {
        font-size: 40px;
    } 
}

@media (min-width: 1000px) {
    .title {
        font-size: 70px;
    }
}

@media (min-width: 400px) {
    .btn-lg {
        font-size: 1.25rem;
    }
}

@media (min-width: 768px) {
    .img-myth {
        width: 70%;
    }
}

@media (min-width: 1300px) {
    .img-myth { 
        width: 50%;
    }
}

@media (min-width: 2000px) {
    .img-myth { 
        width: 30%;
    }
}



/* 968 range most common screen size so default font-size. */

/* remove images on myth cards below 326px */
@media (max-width: 326px) {
    .myth-card-front {
        background-image: none;
    }
}

@media  (min-width: 327px) and (max-width: 767px) {
    .myth-card {
        width: 800px;
        height: 800px;
    }
}

@media  (min-width: 327px) and (max-width: 599px) {
    .myth-card-text {
        font-size: 1.1rem;
    }
}

@media  (min-width: 600px) and (max-width: 767px) {
    .myth-card-text {
        font-size: 1.8rem;
    }
}

@media  (min-width: 768px) and (max-width: 1199px) {
    .myth-card {
        width: 500px;
        height: 700px;
    }
    .myth-card-text {
        font-size: 1.1rem;
    }
}

@media (min-width: 900px) and (max-width: 1026px) {
    .myth-card-text {
        font-size: 1.28rem;
    }
}

@media (min-width: 1027px) and (max-width: 1199px) {
    .myth-card-text {
        font-size: 1.5rem;
    }
}

@media  (min-width: 1200px) {
    .myth-card {
        width: 800px;
        height: 800px;
    }
}

@media  (min-width: 1200px) and (max-width: 1887px) {
    .myth-card-text {
        font-size: 1.5rem;
    }
}

@media  (min-width: 1887px) {
    .myth-card-text {
        font-size: 2.0rem;
    }
}

